Bug 102003 - Sidebar Page content panel background drop lists confusion
Summary: Sidebar Page content panel background drop lists confusion
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Katarina Behrens (Inactive)
URL:
Whiteboard: target:5.4.0
Keywords: implementationError
Depends on:
Blocks:
 
Reported: 2016-09-09 00:51 UTC by V Stuart Foote
Modified: 2017-02-22 11:15 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description V Stuart Foote 2016-09-09 00:51:25 UTC
The new Page content panel has some issues with the drop lists.

On Windows 10 Pro 64-bit 1607, en-US with

Version: 5.3.0.0.alpha0+
Build ID: 6ccb82ddf302acbd56bd4ea67fce107883e5391c
CPU Threads: 8; OS Version: Windows 6.19; UI Render: GL; 
TinderBox: Win-x86@42, Branch:master, Time: 2016-09-08_05:50:23
Locale: en-US (en_US); Calc: CL

STR

1. open Draw
2. set Orientation to landscape
3. set Background to bitmap
4. attempt to select a background from list
- sky
- water
- course grained
- space
none apply, just a solid blue background
5. try metal, bitmap background applies
6. try droplets

Background field jumps to "Pattern" and "40 percent" selected from list.

Seems like metal is the only bitmap that can reliably be assigned--selecting next on list (droplets) repositions to Pattern w/40 percent.  Additional choices from either go to solid color fill.
Comment 1 Buovjaga 2016-10-01 18:07:52 UTC
Repro.

Adding keyword implementationError as this concerns a new feature.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.3.0.0.alpha0+
Build ID: dc41255dc725dfa912326cc5d9e420bd66471c64
CPU Threads: 8; OS Version: Linux 4.7; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on October 1st 2016
Comment 2 Commit Notification 2017-02-21 20:44:24 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a6cc03546975c9343e2c554f3f049c8f7c35bb54

tdf#102003: Fix misbehaving bitmap fills in sidebar

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Buovjaga 2017-02-22 11:15:45 UTC
Verified fix.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.4.0.0.alpha0+
Build ID: 9e1b66aef1bdba6ba5cf3178aff3af1ac0b5d72c
CPU threads: 8; OS: Linux 4.9; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on February 22nd 2016