tdf#102003: Fix misbehaving bitmap fills in sidebar

Change-Id: I7339081df12695ad624a8b71024281034d9380be